# quant_msx

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: accounts.py  grids.py  orders.py  system.py
app/broker/: __init__.py  auth.py  commands.py  common.py  endpoints.py  msx.py  msx_rest.py  msx_ws.py  orderbook.py  transport.py  ws_manager.py
app/core/: config.py  logging.py  runtime.py
app/domain/: accounts.py  grid.py  market.py  orders.py
app/services/: account_credentials.py  exchange_account_service.py  grid_service.py  market_data_service.py  order_service.py  risk_service.py  scheduler_service.py
app/storage/: db.py  models.py
app/web/: __init__.py  routes.py  static.py
app/web/static/: styles.css
docs/: README.md  api.md
docs/architecture/: 01_product_requirements.md  02_system_architecture.md  03_domain_models.md  04_execution_risk.md  05_web_ui.md  06_delivery_plan.md
docs/strategy/: grid_strategy.md
tests/: test_account_management.py  test_broker_contracts.py  test_grid_management.py  test_system.py
