[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-msx"
version = "0.1.0"
description = "MSX-focused quantitative trading platform with grid strategies"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "httpx==0.27.2",
  "uvicorn[standard]==0.30.6",
  "sqlalchemy==2.0.35",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "loguru==0.7.2",
  "websockets==15.0.1",
  "cryptography==43.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "ruff==0.6.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
